# pyspark-expectations

./: .gitignore  README.md  pyproject.toml
expectations/: decorator.py
tests/: conftest.py  test_decorator.py
