[tool.poetry]
name = "pyspark-expectations"
version = "0.1.0"
description = ""
authors = ["Dan"]
readme = "README.md"
packages = [{include = "expectations"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
pytest = "^7.2.0"
seaborn = "^0.12.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
